# PhiTorch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  demo  main.cpp  pyproject.toml
examples/: CMakeLists.txt  tensor.cpp
include/: GpuScheduler.hpp
include/autograd/: BackwardFns.hpp  ComputationGraph.hpp  Node.hpp
include/tensor/: TenserOps.hpp  Tensor.hpp
src/: GpuScheduler.cpp  PhiTorch.jl  main  main.c  main.cpp  main.py
src/autograd/: Node.cpp  NodeAutoGrad.py  TensorAutoGrad.py
src/eval/: tensor_eval.py
src/kernels/: tensor.metal
src/lib/: ThreadPool.c  ThreadPool.h
src/nn/: MLP.py  Optimizer.py  __init__.py  nn.h
src/tensor/: MyTensorPkg.jl  Tensor.c  Tensor.cpp  Tensor.h  Tensor.jl  Tensor.py  TensorOps.cpp  p  program  t  tensor.cpp
src/tests/: CTensor.jl  autograd_tests.py  tensor_test.cpp  tensor_test.jl
src/tests/ops-tests/: dot_prod.jl
tests/: CTensor.jl  tensor_test.jl
