[tool.poetry]
name = "src"
version = "0.1.0"
description = "Python components for Phitorch"
authors = ["Philip Yi"]
readme = "README.md"
packages = []

# [tool.poetry.scripts]
# optimizer = "src.nn.optimizer:main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
